--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
   "dependencies": {
     "babel-preset-react": "^6.11.1",
     "babelify": "^7.3.0",
+    "mdi": "^1.7.22",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
+    "react-router": "^2.7.0",
     "watchify": "^3.7.0"
   }
 }
